updates for stockholm

--- a/2018-05-31/raxx-refined-web-development/index.html
+++ b/2018-05-31/raxx-refined-web-development/index.html
@@ -17,9 +17,9 @@
     </header>
     <main class="article">
       <h1>Raxx - refined web development</h1>
-      <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">
+      <!-- <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">
         <img src="/images/elixirdaze2018.jpg" alt="Me talking at Elixir Daze 2018" style="max-width:100%;">
-      </a>
+      </a> -->
       <p>
         Raxx can be used to build web applications much like Plug.
         However that is where the similarities end.
@@ -34,11 +34,11 @@
       </p>
       <p>
         <a href="slides.html">Slides</a>
-        <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">Video</a>
+        <!-- <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">Video</a> -->
       </p>
     </main>
     <footer>
-      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-03-02/raxx-refined-web-development/index.html" class="edit-page-link">Edit this page</a>
+      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-05-31/raxx-refined-web-development/index.html" class="edit-page-link">Edit this page</a>
     </footer>
   </body>
 </html>
