--- a/2018-05-31/raxx-refined-web-development/slides.html
+++ b/2018-05-31/raxx-refined-web-development/slides.html
@@ -42,6 +42,20 @@
       .full {
         margin: -2em;
       }
+      @page {
+        size: 1210px 681px;
+        margin: 0;
+      }
+
+      @media print {
+        .remark-slide-scaler {
+          width: 100% !important;
+          height: 100% !important;
+          transform: scale(1) !important;
+          top: 0 !important;
+          left: 0 !important;
+        }
+      }
     </style>
   </head>
   <body>
