add video from codebeam STO

--- a/2018-05-31/raxx-refined-web-development/index.html
+++ b/2018-05-31/raxx-refined-web-development/index.html
@@ -17,9 +17,9 @@
     </header>
     <main class="article">
       <h1>Raxx - refined web development</h1>
-      <!-- <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">
-        <img src="/images/elixirdaze2018.jpg" alt="Me talking at Elixir Daze 2018" style="max-width:100%;">
-      </a> -->
+      <a href="https://www.youtube.com/watch?v=nk3RpnsVKO8">
+        <img src="https://codesync.global/uploads/media/theme/0001/01/16d70351e4ef837c6fbab1a10e1576a862092484.jpeg" alt="Me talking at Elixir Daze 2018" style="max-width:100%;">
+      </a>
       <p>
         Raxx can be used to build web applications much like Plug.
         However that is where the similarities end.
@@ -30,11 +30,11 @@
         This talk will cover an introduction to the project; an overview of the rationale behind it, and finally a vision of what comes next.
       </p>
       <p>
-        Talk given at <a href="http://www.elixirdaze.com/">Elixir Daze 2018</a>.
+        Talk given at <a href="https://codesync.global/conferences/code-beam-sto-2018/">Code Beam STO 2018</a>.
       </p>
       <p>
         <a href="slides.html">Slides</a>
-        <!-- <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">Video</a> -->
+        <a href="https://www.youtube.com/watch?v=nk3RpnsVKO8">Video</a>
       </p>
     </main>
     <footer>
