link to raxx github

--- a/2018-05-31/raxx-refined-web-development/index.html
+++ b/2018-05-31/raxx-refined-web-development/index.html
@@ -21,7 +21,7 @@
         <img src="https://codesync.global/uploads/media/theme/0001/01/16d70351e4ef837c6fbab1a10e1576a862092484.jpeg" alt="Me talking at Elixir Daze 2018" style="max-width:100%;">
       </a>
       <p>
-        Raxx can be used to build web applications much like Plug.
+        <a href="https://github.com/crowdhailer/raxx">Raxx</a> can be used to build web applications much like Plug.
         However that is where the similarities end.
         Raxx aims to simplify web applications by promoting simple concepts like functional purity and message passing.
       </p>
