--- a/pachyderm.html
+++ b/pachyderm.html
@@ -17,6 +17,12 @@
       </nav>
     </header>
     <main class="article">
+      <p>
+        New post all about calm.
+        Start with three list message and reduce
+        state map can just start with concattenation
+        Was thinking of a JS code samples
+      </p>
       <h1>Reimagining the actor model</h1>
       <p>
         This is a post in which I discuss grouping system state by entities.
